--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+foliatest 0.3 2018-11-29
+[Ko van der Sloot]
+* new version with LOTS of new tests, for libfolia upto v0.15
 
 foliatest 0.2 2016-01-14
 [Ko van der Sloot]
