--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+foliatest 0.4 2019-05-15
+[Ko van der Sloot]
+* Works with many libfolia/FoLiA versions, after reconfiguring
+* a lot of new tests added
+
 foliatest 0.3 2018-11-29
 [Ko van der Sloot]
 * new version with LOTS of new tests, for libfolia upto v0.15
