NEWS about the release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+foliatest 0.5 2019-05-29
+[Ko van der Sloot]
+Major release for FoLia 2.0 and upwards
+
 foliatest 0.4 2019-05-15
 [Ko van der Sloot]
 * Works with many libfolia/FoLiA versions, after reconfiguring
