NEWS about the release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+foliatest 0.6 2019-06-19
+[Ko van der Sloot]
+Small update. Added/adapted some tests regarding provenance
+
 foliatest 0.5 2019-05-29
 [Ko van der Sloot]
 Major release for FoLia 2.0 and upwards
