--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+foliatest 0.12 2021-07-12
+[Ko van der Sloot]
+* added and improved numerous tests upto libfolia 2.18
+
 foliatest 0.11 2021-07-12
 [Ko van der Sloot]
 * added tests for newer Correction handling in FoLiA
