--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-foliatest 0.12 2021-07-12
+foliatest 0.13 2024-05-27
+[Ko van der Sloot]
+* added and improved tests upto libfolia 2.19
+
+foliatest 0.12 2024-04-26
 [Ko van der Sloot]
 * added and improved numerous tests upto libfolia 2.18
 
