--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+foliatest 0.15 20245-12-11
+[Ko van der Sloot]
+* added and improved tests upto libfolia 2.22
+
 foliatest 0.14 2024-12-16
 [Ko van der Sloot]
 * added and improved tests upto libfolia 2.21
